--- a/.gitignore
+++ b/.gitignore
@@ -139,9 +139,4 @@ crashlytics-build.properties
 fabric.properties
 
 # Data Dir
-training_data/
-cv_data/
-
-# Checkpoint
-checkpoint_dir
-hg_eval
+data/
